# spg

./: CONTRIBUTING.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
src/: cli.rs  clipboard.rs  generator.rs  lib.rs  main.rs
tests/: generator.rs
